feat: add getting the user id from the context
